# lessmsi

./: .gitattributes  .gitignore  .travis.yml  CNAME  CODE_OF_CONDUCT.md  LICENSE  README.md  appveyor.yml  index.html  params.json  release.config.js  serve.sh
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
Reference/: CAB Format Notes.txt
art/: lessmsiicon.pxm  lessmsiicon32x32.pxm
contrib/python/: LessMsi.py  setup.cfg  setup.py
css/: bootstrap.css  bootstrap.min.css  stylesheet.css
js/: bootstrap.js  bootstrap.min.js
src/: CommonAssemblyInfo.cs  LICENSE  LessMsi.sln  build.bat  build.sh  clean.bat  lessmsi.msbuild  test.bat  zipfile.msbuild.targets  zipfile.test.msbuild
src/.build/: CommonAssemblyInfo.cs  MSBuild.Community.Tasks.targets  VERIFICATION.txt  chocolateyInstall.ps1  lessmsi.msbuild  lessmsi.nuspec  nuget-restore.bat  semantic-release-prepare.cmd  semantic-release-publish.cmd  semantic-release-verify.cmd  zipfile.msbuild.targets  zipfile.test.msbuild
src/.nuget/: NuGet.mono.targets  NuGet.targets  packages.config
src/ExplorerShortcutHelper/: ExplorerShortcutAdder.cs  ExplorerShortcutHelper.cs  ExplorerShortcutHelper.csproj  Program.cs  RegistryTools.cs  app.config  app.manifest
src/LessMsi.Cli/: App.config  ArchitectureType.cs  ExtractCommand.cs  ExtractionMode.cs  LessMsi.Cli.csproj  LessMsiCommand.cs  ListTableCommand.cs  OpenGuiCommand.cs  Options.cs  Program.cs  ShowHelpCommand.cs  ShowVersionCommand.cs  eExtractionMode.cs  packages.config
src/LessMsi.Core/: LessMsi.Core.csproj  NativeMethods.cs  packages.config
(+202 files in other folders)
