[metadata]
name = LessMsi
#version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/lessmsi/tree/python/contrib/python
description = A python wrapper for extraction of MSIs with lessmsi
keywords = msi, cab, extract, python
license = MIT
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: OSI Approved
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Science

[options]
python_requires = >=3.4
zip_safe = True
py_modules = LessMsi
setup_requires = setuptools_scm;
install_requires =
	pythonnet

